Bug 124148 - Dialog theming/UX - items in select box are too small for finger usage
Summary: Dialog theming/UX - items in select box are too small for finger usage
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-18 12:12 UTC by Nicolas Christener
Modified: 2019-04-05 10:13 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example of selectbox with small items (563.57 KB, image/png)
2019-03-18 12:13 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-03-18 12:12:09 UTC
Description:
Entries in a select box in a tunneled dialig on iOS are a bit too small to be used with a finger. If a use is very cautious it's possible to click on the correct item, however in order to have a good UX it would be nice if the entries have a bigger size.

Steps to Reproduce:
1. Create a writer document in the iOS app
2. Create some text, select it and click "Edit > Edit paragraphe style" in the menu (Bearbeiten > Absatzvoralge bearbeiten... in German)
3. Chose for example "Font Effect" and check the select box right next to "Overlining"

Actual Results:
The items in the select box are very small and it's hard to click the right one.

Expected Results:
The items should be bigger and easy to select with a finger.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-03-18 12:13:28 UTC
Created attachment 150050 [details]
Example of selectbox with small items
Comment 2 Commit Notification 2019-03-28 14:42:25 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ce9dab8c161e29769131cec741a6a9cceec8552d%5E%21

tdf#124148 add configurable margin for the listbox pop-up list

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-04-03 07:51:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/728f074ab672469af933d492843230bd5c5bd0cd%5E%21

Related: tdf#124148 null-deref on clicking inside empty listbox

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Tomaz Vajngerl 2019-04-05 10:13:48 UTC
Increased the size, should be better now.