tdf#124148 add configurable margin for the listbox pop-up list

This is needed to increase the area of lisbox entries in the
pop-up list so it is easier to select with touch.

Reviewed-on: https://gerrit.libreoffice.org/69889
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit ce9dab8c161e29769131cec741a6a9cceec8552d)

Change-Id: Iedb910508de26c903dc3f50f645f567d4c988940