vcl/inc/listbox.hxx
@@ -50,6 +50,8 @@ struct ImplEntryType
     ListBoxEntryFlags mnFlags;
     long        mnHeight;
 
+    long getHeightWithMargin() const;
+
     ImplEntryType( const OUString& rStr, const Image& rImage ) :
         maStr( rStr ),
         maImage( rImage ),
@@ -313,6 +315,7 @@ public:
     tools::Rectangle       GetBoundingRectangle( sal_Int32  nItem ) const;
 
     long            GetEntryHeight() const              { return mnMaxHeight; }
+    long            GetEntryHeightWithMargin() const;
     long            GetMaxEntryWidth() const            { return mnMaxWidth; }
 
     void            SetScrollHdl( const Link<ImplListBoxWindow*,void>& rLink ) { maScrollHdl = rLink; }
@@ -437,6 +440,7 @@ public:
 
     Size            CalcSize( sal_Int32  nMaxLines ) const              { return maLBWindow->CalcSize( nMaxLines ); }
     long            GetEntryHeight() const          { return maLBWindow->GetEntryHeight(); }
+    long            GetEntryHeightWithMargin() const{ return maLBWindow->GetEntryHeightWithMargin(); }
     long            GetMaxEntryWidth() const        { return maLBWindow->GetMaxEntryWidth(); }
 
     void            SetScrollHdl( const Link<ImplListBox*,void>& rLink ) { maScrollHdl = rLink; }
